--- a/src/components/client_brand_blog_section/client_brand_blog.css
+++ b/src/components/client_brand_blog_section/client_brand_blog.css
@@ -214,3 +214,47 @@ line-height: 1.4;
     transition: all linear 0.3s;
     color: #55e6a5;
 }
+
+/* Media Client */
+@media screen and (max-width:1400px) {
+    .client__div__title h2{
+        font-size: 38px;
+    }
+    
+}
+@media screen and (max-width:992px) {
+    .client__div__title h2{
+        font-size: 42px;
+    }
+    #clientRow{
+        gap: 60px;
+    }
+    .clientCol{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .client__div__title h2{
+        font-size: 36px;
+    }
+    
+}
+@media screen and (max-width:576px) {
+    .client__div__area{
+        padding: 25px;
+    }
+    .client__div__area p::after{
+        display: none;
+    }
+    .client__div__area__img img{
+        width: 70px;
+        height: 70px;
+
+       }
+}
+@media screen and (max-width:350px) {
+    
+    
+    
+}
