--- a/src/components/about_section/about.css
+++ b/src/components/about_section/about.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* height: calc(100vh - 80px); */
   padding-top: 20px;
+  
 }
 #aboutRow{
   display: flex;
@@ -94,22 +96,24 @@
     top: 0px;
     right: 6px;
 }
-
+@media screen and (min-width:1400px){
+  .header__section{
+    padding-top:  100px;
+    padding-bottom: 100px;
+  }
+}
 @media screen and (max-width:1400px){
-  .header__section__right{
-    width: 451px;
-    height: 500px;
-    margin-left: 90px;
+  .header__section{
+    padding-top:  100px;
+    padding-bottom: 100px;
+
   }
   .header__section__right img{
-    width: 381px;
     height: 430px;
   }
   .header__section__right::after{
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+    width: 451px;
+    height:500px;
   }
 }
 
@@ -117,21 +121,55 @@
   .header__section__right{
   display: none;
 }
- 
+ #aboutRow{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+ }
+ #aboutCol1{
+  width: 65%;
+ }
 .header__section__left{
-  margin-top: 30px;
+  margin-top: 30px;  
 }
-.header__section__left h1{
-  font-size: 50px;
+#aboutCol2{
+  display: none
 }
-.header__section__left p{
-  font-size: 12px; 
-}
-
 };
+@media screen and (max-width:992px){
+  #aboutCol1{
+    width: 720px;
+  }
+}
 
-
+@media screen and (max-width:992px){
+  #aboutCol1{
+    width: 720px;
+  }
+  #aboutCol2{
+    display: none;
+  } 
+}
+@media screen and (max-width:768px){
+  .header__section__left h1{
+    font-size: 48px;
+  }
+   
+}
+@media screen and (max-width:470px){
+  .header__section__left h1{
+    font-size: 40px;
+  }
+  .header__section__left p{
+    font-size: 12px;
+  }
+}
+@media screen and (max-width:360px){
+  .header__section__left__buttons button{
+    padding: 20px 30px;   
+  }
+  .header__section__left__buttons a i {
+    font-size: 40px;
+  }
   
-
-
-
+}
