--- a/src/components/portfolio_section/portfolio.css
+++ b/src/components/portfolio_section/portfolio.css
@@ -20,10 +20,63 @@ margin-bottom: 25px;
     color: #ffffff;
 }
 .portfolio__div a img{
+    width: 100%;
     height: 550px;
     margin-top: 25px;
     overflow: hidden;
     position: relative;
     display: block;
-    width: 100%;
+    object-fit: cover;
+}
+
+/* Media */
+@media screen and (max-width:1400px) {
+    .portfolio__div__title h2{
+        font-size: 38px;
+    }
+    
+}
+@media screen and (max-width:1200px) {
+   .portfolioCol1{
+    width: 50%;
+    
+   } 
+}
+@media screen and (max-width:992px) {
+    .portfolio__div__title h2{
+        font-size: 42px;
+    }
+    .portfolio__div a img{
+        width: 336px;
+        height: 350px;
+    }
+
+ }
+@media screen and (max-width:768px) {
+    .portfolio__div__title h2{
+        font-size: 36px;
+    }
+    .portfolioCol1{
+        width: 100%;
+    }
+    .portfolioCol2{
+        width: 100%;
+    }
+    .portfolio__div a img{
+        width: 516px;
+        height: 350px;
+    }
+}
+@media screen and (max-width:576px) {
+    
+    /* .portfolioCol1{
+        width: 100%;
+    }
+    .portfolioCol2{
+        width: 100%;
+    } */
+    .portfolio__div a img{
+        width: 100%;
+        
+    }
 }
