--- a/src/components/subscribe_section/subscribe.css
+++ b/src/components/subscribe_section/subscribe.css
@@ -39,7 +39,7 @@ position: relative;
     background: #131313;
     outline: none;
 }
-#subsribe__form input::placeholder{
+#subscribe__form input::placeholder{
     color: #a2a2a2;
 }
 #subscribe__form button{
@@ -60,4 +60,34 @@ position: relative;
 #subscribe__form button:hover{
     background: #141c27;
     color: #ffffff;
+}
+
+/* Media */
+@media screen and (max-width:1400px) {
+    #subscribe__form input{
+        width: 546px ;
+    }
+}
+@media screen and (max-width:1200px) {
+    #subscribe__form input{
+        width: 616px ;
+    }
+}
+@media screen and (max-width:992px) {
+    #subscribe__form input{
+        width: 576px ;
+    }
+}
+@media screen and (max-width:768px) {
+    #subscribe__form input{
+        width: 516px;
+    }
+}
+@media screen and (max-width:576px) {
+    #subscribe__form{
+        width: 100%;
+    }
+    #subscribe__form input{
+        width: 100%;
+    }
 }
