--- a/src/components/client_brand_blog_section/client_brand_blog.css
+++ b/src/components/client_brand_blog_section/client_brand_blog.css
@@ -1,260 +1,372 @@
-.client__div{
-    padding-top: 115px;
-    padding-bottom: 120px;
-    background: #02050a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.client__div {
+  padding-top: 115px;
+  padding-bottom: 120px;
+  background: #02050a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.client__div__title{
-    margin-bottom: 100px;
+.client__div__title {
+  margin-bottom: 100px;
 }
-.client__div__title h5{
-    font-size: 20px;
-    font-weight:500;
-    letter-spacing: 1.4px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 15px;
-    color: #55e6a5;
+.client__div__title h5 {
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 1.4px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 15px;
+  color: #55e6a5;
 }
-.client__div__title h2{
- font-size: 48px;
- text-align: center;
- font-weight: 600;
- line-height: 1.3;
- color: #ffffff;   
+.client__div__title h2 {
+  font-size: 48px;
+  text-align: center;
+  font-weight: 600;
+  line-height: 1.3;
+  color: #ffffff;
 }
-#clientRow{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto
-    
+#clientRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
-.client__div__area{
-    position: relative;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-right: 100px;
-    padding-left: 30px;
-    border: 2px solid #333f4d;
-    /* width: 630px; */
+.client__div__area {
+  position: relative;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-right: 100px;
+  padding-left: 30px;
+  border: 2px solid #333f4d;
 }
-.client__div__area__img{
-    position: absolute;
-    top: -50px;
-    right: 50px;   
+.client__div__area__img {
+  position: absolute;
+  top: -50px;
+  right: 50px;
 }
-.client__div__area__img img{
-    border-radius: 50%;
+.client__div__area__img img {
+  border-radius: 50%;
 }
-.client__div__area__rating{
-color: #ffba08;
-
+.client__div__area__rating {
+  color: #ffba08;
 }
-.client__div__area__rating i{
-    margin-right: 5px;
+.client__div__area__rating i {
+  margin-right: 5px;
 }
-.client__div__area h3{
-    font-size: 22px;
-    font-weight: 500;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    color: #ffffff;
+.client__div__area h3 {
+  font-size: 22px;
+  font-weight: 500;
+  margin-top: 20px;
+  margin-bottom: 15px;
+  color: #ffffff;
 }
-.client__div__area h5{
-    font-size: 14px;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #a2a2a2;
+.client__div__area h5 {
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #a2a2a2;
 }
-.client__div__area p{
-    font-size: 16px;
-    font-weight: 500;
-    position: relative;
-    margin-top: 20px;
-    color: #a2a2a2;
-    line-height: 1.7;
+.client__div__area p {
+  font-size: 16px;
+  font-weight: 500;
+  position: relative;
+  margin-top: 20px;
+  color: #a2a2a2;
+  line-height: 1.7;
 }
-.client__div__area p::after{
-        position: absolute;
-        content: "";
-        background: url("https://zyan.vercel.app/images/icon/quot.png");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 50px;
-        height: 35px;
-        top: 5px;
-        right: -78px;   
+.client__div__area p::after {
+  position: absolute;
+  content: "";
+  background: url("https://zyan.vercel.app/images/icon/quot.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50px;
+  height: 35px;
+  top: 5px;
+  right: -78px;
+}
+.brand {
+  background: #55e6a5;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .brand{
-    background: #55e6a5;
-    height: 30vh;
+    
+        ul{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 25px;
+            padding-bottom: 30px;
+            li{
+                padding-left: 20px;
+                a{
+                    -webkit-text-stroke: 1px black;
+                    -webkit-text-fill-color: transparent;
+                    font-size: 110px;
+                    font-weight: 700;
+                    color: #ffffff;
+                }
+            }
+            
+        }
+    }
+
+
+.blog__div {
+  background: #02050a;
+  padding-top: 125px;
+  padding-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.blog__div__title {
+  margin-bottom: 30px;
 }
 
-.blog__div{
-    background: #02050a;
-    padding-top: 125px;
-    padding-bottom: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.blog__div__title h5 {
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 1.4px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  color: #55e6a5;
 }
-.blog__div__title{
-    margin-bottom: 30px;
+.blog__div__title h2 {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 1.3;
+  color: #ffffff;
 }
-
-.blog__div__title h5{
-    font-size: 20px;
-    font-weight: 500;
-    letter-spacing: 1.4px;
-    text-transform: uppercase;
-    margin-bottom: 15px;
-    color: #55e6a5;
-    
+#blogRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.blog__div__title h2{
-    font-size: 48px;
-    font-weight: 600;
-    line-height: 1.3;
-    color: #ffffff;
+.blog__div__button {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 40px;
 }
-#blogRow{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+.blog__div__button a {
+  padding: 25px 40px;
+  background: #55e6a5;
+  color: #02050a;
+  font-weight: 500;
+  transition: all 0.3s linear 0s;
 }
-.blog__div__button{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-top: 40px
+.blog__div__button a:hover {
+  background: #141c27;
+  color: #ffffff;
 }
-.blog__div__button a{
-    padding: 25px 40px;
-    background: #55e6a5;
-    color: #02050a;
-    font-weight: 500;
-    transition: all 0.3s linear 0s;
-}
-.blog__div__button a:hover{
-    background: #141c27;
-    color: #ffffff;
-}
-.blog__div__card{ 
-    margin-top: 25px;
-    overflow: hidden;
+.blog__div__card {
+  margin-top: 25px;
+  overflow: hidden;
 }
 
 .blog__div__card img {
-    
-    transition: transform 0.3s ease; 
-    width: 415px;
+  transition: transform 0.3s ease;
+  width: 415px;
 }
 
-.blog__div__card:hover img{
-    transform: scale(1.1);
+.blog__div__card:hover img {
+  transform: scale(1.1);
 }
 
-.blog__div__text{
-    width: 370px;
-    padding: 30px 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: #09101a;
-    position: relative;
-    left: 20px;
-    top: -76px;
+.blog__div__text {
+  width: 370px;
+  padding: 30px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #09101a;
+  position: relative;
+  left: 20px;
+  top: -76px;
 }
-.blog__div__text span{
-    font-size: 16px;
-    padding: 20px 17px;
-    width: 200px;
-    font-weight: 500;
-    position: absolute;
-    top: -25px;
-    right: 80px;
-    text-align: center;
-    background: #55e6a5;
-    color: #02050a;
+.blog__div__text span {
+  font-size: 16px;
+  padding: 20px 17px;
+  width: 200px;
+  font-weight: 500;
+  position: absolute;
+  top: -25px;
+  right: 80px;
+  text-align: center;
+  background: #55e6a5;
+  color: #02050a;
 }
-.blog__div__text ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 15px;
-    margin-bottom: 10px;
+.blog__div__text ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
-.blog__div__text ul li{
-    color: #ffffff;
+.blog__div__text ul li {
+  color: #ffffff;
 }
-.blog__div__text ul li i{
-    margin-right: 10px;
-    color: #55e6a5;
-    font-weight: 900;
+.blog__div__text ul li i {
+  margin-right: 10px;
+  color: #55e6a5;
+  font-weight: 900;
 }
 
-.blog__div__text__link{
-font-size: 20px;
-font-weight: 600;
-color: #ffffff;
-text-align: center;
-margin-top: 10px;
-line-height: 1.4;
+.blog__div__text__link {
+  font-size: 20px;
+  font-weight: 600;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 10px;
+  line-height: 1.4;
 }
-.blog__div__text__link:hover{
-    transition: all linear 0.3s;
-    color: #55e6a5;
+.blog__div__text__link:hover {
+  transition: all linear 0.3s;
+  color: #55e6a5;
 }
 
 /* Media Client */
-@media screen and (max-width:1400px) {
-    .client__div__title h2{
-        font-size: 38px;
-    }
-    
+@media screen and (max-width: 1400px) {
+  .client__div__title h2 {
+    font-size: 38px;
+  }
 }
-@media screen and (max-width:992px) {
-    .client__div__title h2{
+@media screen and (max-width: 992px) {
+  .client__div__title h2 {
+    font-size: 42px;
+  }
+  #clientRow {
+    gap: 60px;
+  }
+  .clientCol {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .client__div__title h2 {
+    font-size: 36px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .client__div__area {
+    padding: 25px;
+  }
+  .client__div__area p::after {
+    display: none;
+  }
+  .client__div__area__img img {
+    width: 70px;
+    height: 70px;
+  }
+}
+
+/* Media Blog */
+@media screen and (max-width: 1400px) {
+  .blog__div__title h2 {
+    font-size: 38px;
+  }
+  .blog__div__card img {
+    width: 356px;
+  }
+  .blog__div__text {
+    width: 320px;
+    span {
+      right: 55px;
+      top: -30px;
+    }
+    ul {
+      flex-direction: column;
+      gap: 20px;
+    }
+  }
+}
+@media screen and (max-width: 1200px) {
+  .blogCol {
+    width: 50%;
+  }
+  .blog__div__title h2 {
+    font-size: 38px;
+  }
+  .blog__div__card img {
+    width: 456px;
+  }
+  .blog__div__text {
+    width: 370px;
+    left: 40px;
+    span {
+      top: -25px;
+      right: 80px;
+    }
+    ul {
+      flex-direction: row;
+      gap: 20px;
+    }
+  }
+}
+@media screen and (max-width: 992px) {
+  .blogTitleCol {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    .blog__div__title {
+      h2 {
         font-size: 42px;
+      }
     }
-    #clientRow{
-        gap: 60px;
+  }
+  .blog__div__card img {
+    width: 336px;
+  }
+  .blog__div__text {
+    width: 302.4px;
+    left: 18px;
+    span {
+      right: 53px;
+      top: -30px;
     }
-    .clientCol{
-        width: 100%;
+    ul {
+      li {
+        font-size: 13px;
+      }
     }
+    a {
+      font-size: 19px;
+    }
+  }
 }
 
-@media screen and (max-width:768px) {
-    .client__div__title h2{
-        font-size: 36px;
+@media screen and (max-width: 768px) {
+  .blog__div__title {
+    h2 {
+      font-size: 36px !important;
     }
+  }
+  .blogCol {
+    width: 100%;
     
+  }
+  .blog__div__card img {
+    width: 100%;
+  }
+  .blog__div__text {
+    width: 80%;
+    left: 54px;
+    span {
+      right: 25%;
+    }
+  }
 }
-@media screen and (max-width:576px) {
-    .client__div__area{
-        padding: 25px;
-    }
-    .client__div__area p::after{
-        display: none;
-    }
-    .client__div__area__img img{
-        width: 70px;
-        height: 70px;
-
-       }
+@media screen and (max-width: 520px) {
+.blog__div__text{
+ display: none;  
 }
-@media screen and (max-width:350px) {
-    
-    
-    
 }
